--- a/frameworks/Java/gemini/build.xml
+++ b/frameworks/Java/gemini/build.xml
@@ -9,7 +9,7 @@
        |~~~ (The current source code of GeminiHello and Gemini.)
   
 -->
-<project default="servlet" name="geminihello">
+<project default="build" name="geminihello">
 
   <target name="compile">
     
@@ -33,8 +33,8 @@
     
   </target>
   
-  <target name="build" depends="compile">
-    <jar destfile="gemini-undertow.jar">
+  <target name="build" depends="clean,compile">
+    <jar destfile="gemini-undertow.jar" basedir="Docroot/WEB-INF/classes">
       <zipgroupfileset dir="Docroot/WEB-INF/lib" includes="*.jar"/>
       <zipfileset dir="configuration" prefix="configuration" />
       <zipfileset dir="Docroot/WEB-INF" prefix="WEB-INF">
@@ -43,6 +43,10 @@
         <attribute name="Main-Class" value="hello.undertow.GhUndertow"/>
       </manifest>
     </jar>
+  </target>
+  
+  <target name="clean">
+    <delete file="gemini-undertow.jar" />
   </target>
   
 </project>
