--- a/frameworks/Java/gemini/configuration/GeminiHello.conf
+++ b/frameworks/Java/gemini/configuration/GeminiHello.conf
@@ -93,9 +93,9 @@ db.Driver.SupportsAbsolute = yes
 db.Driver.SupportsGetRow = yes
 db.Driver.Jdbc1 = no
 
-db.ConnectString = localhost/blag
-db.LoginName = blag
-db.LoginPass = blag
+db.ConnectString = 127.0.0.1/hello_world?jdbcCompliantTruncation=false&elideSetAutoCommits=true&useLocalSessionState=true&cachePrepStmts=true&cacheCallableStmts=true&alwaysSendSetIsolation=false&prepStmtCacheSize=4096&cacheServerConfiguration=true&prepStmtCacheSqlLimit=2048&zeroDateTimeBehavior=convertToNull&traceProtocol=false&useServerPrepStmts&enableQueryTimeouts=false&useUnbufferedIO=false&useReadAheadInput=false&maintainTimeStats=false&cacheRSMetadata=true
+db.LoginName = benchmarkdbuser
+db.LoginPass = benchmarkdbpass
 
 # JTDS (Open source JDBC driver for Microsoft SQL Server)
 #db.Driver.Class = org.postgresql.Driver
