--- a/frameworks/Java/gemini/configuration/GeminiHello.conf
+++ b/frameworks/Java/gemini/configuration/GeminiHello.conf
@@ -67,7 +67,7 @@ Extends = GeminiHello-Version.conf
 #   not actually used by Gemini, but is used as a macro in several
 #   other property values.
 
-ApplicationRoot = ${Servlet.ApplicationRoot}
+ApplicationRoot = Docroot
 #ApplicationRoot = C:/Development/GeminiHello/
 
 # DeploymentDescription
