Update SailsJS framework app to v1.0.x

--- a/benchmark.cfg
+++ b/benchmark.cfg
@@ -1,14 +1,14 @@
 [Defaults]
 # Available Keys:
 os=linux
-server_host=TFB-server
-client_host=TFB-client
-client_identity_file=/home/techempower/.ssh/id_rsa
-client_user=techempower
-database_host=TFB-database
-database_identity_file=/home/techempower/.ssh/id_rsa
+server_host=localhost
+client_host=localhost
+client_identity_file=/home/vagrant/.ssh/id_rsa
+client_user=vagrant
+database_host=localhost
+database_identity_file=/home/vagrant/.ssh/id_rsa
 database_os=linux
-database_user=techempower
+database_user=vagrant
 duration=60
 exclude=None
 install=server
@@ -20,7 +20,7 @@ concurrency_levels=[8, 16, 32, 64, 128, 256]
 query_levels=[1, 5,10,15,20]
 threads=8
 mode=benchmark
-sleep=60
+sleep=10
 test=None
 type=all
 verbose=True
