--- a/frameworks/JavaScript/sailsjs/.sailsrc
+++ b/frameworks/JavaScript/sailsjs/.sailsrc
@@ -1,5 +1,8 @@
 {
-  "generators": {
-    "modules": {}
+  "hooks": {
+    "session": false,
+    "sockets": false,
+    "i18n": false,
+    "blueprints": false
   }
 }
