--- a/frameworks/JavaScript/sailsjs/benchmark_config.json
+++ b/frameworks/JavaScript/sailsjs/benchmark_config.json
@@ -2,12 +2,12 @@
   "framework": "sailsjs",
   "tests": [{
     "default": {
-      "setup_file": "setup-mysql",
+      "setup_file": "setup",
       "json_url": "/json",
-      "db_url": "/mysql/db",
-      "query_url": "/mysql/queries?queries=",
-      "fortune_url": "/mysql/fortunes",
-      "update_url": "/mysql/updates?queries=",
+      "db_url": "/db",
+      "query_url": "/queries?queries=",
+      "fortune_url": "/fortunes",
+      "update_url": "/updates?queries=",
       "plaintext_url": "/plaintext",
       "port": 8080,
       "approach": "Realistic",
@@ -17,28 +17,6 @@
       "language": "JavaScript",
       "flavor": "NodeJS",
       "orm": "Micro",
-      "platform": "nodejs",
-      "webserver": "None",
-      "os": "Linux",
-      "database_os": "Linux",
-      "display_name": "Sails.js",
-      "notes": "",
-      "versus": "nodejs"
-    },
-    "postgres": {
-      "setup_file": "setup-postgresql",
-      "db_url": "/postgres/db",
-      "query_url": "/postgres/queries?queries=",
-      "update_url": "/postgres/updates?queries=",
-      "fortune_url": "/postgres/fortunes",
-      "port": 8080,
-      "approach": "Realistic",
-      "classification": "Fullstack",
-      "database": "Postgres",
-      "framework": "None",
-      "language": "JavaScript",
-      "flavor": "NodeJS",
-      "orm": "Full",
       "platform": "nodejs",
       "webserver": "None",
       "os": "Linux",
