--- a/frameworks/JavaScript/sailsjs/package.json
+++ b/frameworks/JavaScript/sailsjs/package.json
@@ -2,32 +2,28 @@
   "name": "sailsjs",
   "private": true,
   "version": "0.0.0",
-  "description": "a Sails application for TFB testing",
+  "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "async": "1.5.2",
-    "bluebird": "3.4.1",
-    "ejs": "2.4.2",
-    "handlebars": "4.0.5",
-    "hiredis": "0.5.0",
-    "mysql": "2.11.0",
-    "pg": "6.0.2",
-    "pg-hstore": "2.3.2",
-    "rc": "1.1.6",
-    "redis": "2.6.2",
-    "sails": "0.12.3",
-    "sails-disk": "0.10.10",
-    "sequelize": "3.23.4"
+    "async": "2.0.1",
+    "grunt": "1.0.1",
+    "lodash": "3.10.1",
+    "sails": "^1.0.0-20",
+    "sails-hook-grunt": "^1.0.4",
+    "sails-hook-orm": "^2.0.0-0",
+    "sails-hook-sockets": "^1.0.1",
+    "sails-mysql": "^1.0.0-2"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "NODE_ENV=production node app.js",
+    "test": "echo && echo \"* * * * * * * * * * * * * * * * * * * * * * * * * * * \" && echo \"About to run tests...\" && echo && if ! node ./node_modules/mocha/bin/mocha --timeout 10000 ; then echo && echo && echo \"- - -\" && echo \"Looks like something went wrong.\" && echo \"|  If you are not sure what to do next, try:\" && echo \"|  npm install mocha --save-dev\" && echo \"|  \" && echo \"|  And then:\" && echo \"|  mkdir test/\" && echo ; fi",
     "debug": "node debug app.js"
   },
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/TechEmpower/FrameworkBenchmarks/tree/master/frameworks/JavaScript/sailsjs"
+    "url": "git://github.com/vagrant/sailsjs.git"
   },
-  "author": "zane-techempower",
+  "author": "vagrant",
   "license": ""
 }
